src/Components/Pyramid/Pyramid.css
/* put css from index.css here */

h1.centered {
  margin: 10px 0 0 0;
  padding-bottom: 0;
}

.centered {
  margin-top: 0;
  text-align: center;
}

.pyramid {
  width: 90%;
}

.legend {
  display: grid;
    justify-content: center;
    grid-template-columns: 70px 70px 70px;
    text-align: center;
    gap: 17px;
    margin: 15px;
}

.legend-item {
  padding: 6px 3px;
  border-radius: 5px;
  border: solid 3px black;
}

